mule-user-guide/v/3.6/xquery-transformer.adoc
= XQuery Transformer
:keywords: anypoint studio, esb, transformers

The XQuery Module gives users the ability to perform XQuery transformations on XML messages in Mule. This works in a very similar way to the link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xslt-transformer[XSLT Transformer] shipped with Mule.


== Supported XQuery Versions

Mule 3.6.0 and later versions include http://www.w3.org/TR/xquery-30/[XQuery 3.0] support for the XQuery transformer. The transformer's behavior and syntax remain unaltered from previous versions, and you can declare the version to use in the XQuery script itself (see below). For details on XML, XSLT, Xquery, and XPath support in Mule, see the link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xpath[XPath] guide.

For examples on using the XQuery transformer, including the use of features and improvements in version 3.0, see link:https://docs.mulesoft.com/mule-user-guide/v/3.6/xquery-support[XQuery Support].

== Configuration

To use the XQuery transformer you need to add it to your Mule XML configuration.

Here we are configuring a transformer using in-line XQuery expressions.

We also define two `<context-property>` elements:

These properties are pulled from the current message and made available in the XQuery context so that they can be referenced in your XQuery statements. These can be object references or you can use link:https://docs.mulesoft.com/mule-user-guide/v/3.6/mule-expression-language-mel[Mule Expressions] to get information from the current message.

== Declaring the XQuery Version

If the XQuery version is not declared, the transformer defaults to version 1.0. Version 3.0 is backwards-compatible and per the spec, all queries in 1.0 are valid in 3.0 and must return the same result.

To select the XQuery version to use, you can include it in the XQuery script, as shown below:

== Configuration Options

Xquery transformerAn Xml transformer uses XQuery to transform the message payload. Transformation objects are pooled for better performance. You can set transformation context properties on the transformer and can pull these properties from the message using Expression Evaluators.

=== Attributes of <xquery-transformer...>

[%header,cols="5*"]
|===
|Name |Type |Required |Default |Description
|outputEncoding |string |no |  |The encoding to use for the resulting XML/Text.
|acceptExternalEntities |boolean |no |false |Whether to accept XML documents with references to external files. Default value is false. Setting this value to true will make your application vulnerable to XXE attacks. Use with extreme care.
|maxIdleTransformers |integer |no |  |Transformers are pooled for better throughput, since performing and XQuery transformation can be expensive. This attribute controls how many instances will remain idle in the transformer pool.
|maxActiveTransformers |integer |no |  |The total number of XQuery transformers that will get pooled at any given time.
|xquery-file |string |no |  |The full path to the XQuery template file to use when performing the transformation. This can be a path on the local file system or on the classpath. This attribute is not required if the <xquery-text> element has been set.
|configuration-ref |string |no |  |A reference to a Saxon configuration object to configure the transformer (configured as a Spring bean). If not set, the default Saxon configuration is used.
|===

=== Child Elements of <xquery-transformer...>

[%header,cols="34,33,33"]
|===
|Name |Cardinality |Description
|context-property |0..* |A property that willbe made available to the XQuery transform context. Expression Evaluators can be used to grab these properties from the message at runtime.
|xquery-text |0..1 |The inline XQuery script definition. This is not required if the <xquery-file> attribute is set.
|===

== Example

Now your configured XQuery transformer can be referenced by an endpoint. In the following example, you can drop and XML file into a directory on the local machine (see the inbound file endpoint) and the result will be written to `System.out`.

The test data looks like this:

The result written to `System.out` will look like this:

The full configuration for this examples looks like this:

=== Testing

This can be tested using the following functional test.
